--- a/src/styling/Mole.css
+++ b/src/styling/Mole.css
@@ -6,14 +6,13 @@
 
 .mole-cell {
   margin: 2em;
-
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 20px;
   border: 1px solid black;
 }
@@ -25,11 +24,12 @@
   background-color: green;
   color: white;
   border-radius: 20px;
+  cursor: -webkit-grab;
   cursor: grab;
+}
 
-  &:hover {
-    background-color: rgb(44, 187, 44);
-  }
+.mole-up:hover {
+  background-color: #2cbb2c;
 }
 
 .mole-fail {
@@ -40,3 +40,4 @@
   border-radius: 20px;
   cursor: not-allowed;
 }
+/*# sourceMappingURL=Mole.css.map */
