--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,10 +1,34 @@
 .top-container {
-  width: 800px;
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.top-container .logo-box {
+  padding-top: 1rem;
+  text-align: center;
+}
+
+.top-container button {
+  border: none;
+  outline: none;
+  width: 120px;
+  height: 70px;
+  border-radius: 2rem;
+  font-size: 1rem;
+  font-weight: 550;
+}
+
+.top-container button:hover {
+  cursor: pointer;
+  background-color: #a1a1a1;
 }
 
 .mole-container {
