--- a/src/styling/Mole.css
+++ b/src/styling/Mole.css
@@ -13,31 +13,49 @@
   right: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border-radius: 20px;
-  border: 1px solid black;
+  border: none;
 }
 
 .mole-up {
   width: 100%;
   height: 100%;
   text-align: center;
-  background-color: green;
+  background-color: #6d400a;
   color: white;
-  border-radius: 20px;
+  border-radius: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: -webkit-grab;
   cursor: grab;
 }
 
 .mole-up:hover {
-  background-color: #2cbb2c;
+  background-color: #94580f;
 }
 
 .mole-fail {
   width: 100%;
   height: 100%;
   text-align: center;
-  background-color: indianred;
-  border-radius: 20px;
+  border-radius: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #472703;
+  color: white;
   cursor: not-allowed;
 }
 /*# sourceMappingURL=Mole.css.map */
